remove lombok; java 11; no non-engaged pvp damage